--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <a-marker type='barcode' value='7'>
             <a-box position='0 0.5 0' color="yellow"></a-box>
         </a-marker>
-
-        <a-marker id="animated-marker" type='barcode' value='6'>
+<!--change URL to barcode image , type can be adjusted to 'barcode' or 'pattern'-->
+        <a-marker type="pattern" preset="custom" url="...." id="animated-marker" type='barcode' value='6'>
             <a-entity
                 animation-mixer
                 gltf-model="#animated-asset"
