--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a-box position='0 0.5 0' color="yellow"></a-box>
         </a-marker>
 <!--change URL to barcode image , type can be adjusted to 'barcode' or 'pattern'-->
+            <!-- barcodes can be generated here: https://au.gmented.com/app/marker/marker.php -->
         <a-marker type="pattern" preset="custom" url="...." id="animated-marker" type='barcode' value='6'>
             <a-entity
                 animation-mixer
