--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--
 <!doctype HTML>
 <html>
     <head>
@@ -8,7 +9,7 @@
     <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 
     <body style='margin : 0px; overflow: hidden;'>
-        <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
+        <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers 
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
         <a-assets>
@@ -24,7 +25,7 @@
     </body>
 </html>
 
-
+-->
 <!doctype HTML>
 <html>
     <head>
