--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
     <body style='margin : 0px; overflow: hidden;'>
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
-        <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
+        <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4;'>
 
         <a-assets>
             <a-asset-item id="animated-asset" src="https://github.com/R-Walther/https-r-walther.github.io-AR-Cam/blob/main/3d%20models/Bottle_30k.gltf"></a-asset-item>
@@ -58,7 +58,7 @@
             
         <!--change URL to barcode image , type can be adjusted to 'barcode' or 'pattern'-->
         <!-- barcodes can be generated here: https://au.gmented.com/app/marker/marker.php -->
-        <a-marker type="pattern" preset="custom" url="...." id="animated-marker" type='barcode' value='6'>
+        <a-marker type="pattern" preset="custom" url="https://github.com/R-Walther/https-r-walther.github.io-AR-Cam/blob/main/patterns/4x4%20barcode%20marker.png" id="animated-marker" type='barcode' value='6'>
             <a-entity
                 animation-mixer
                 gltf-model="#animated-asset"
