--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     </head>
-    <script src="https://aframe.io/releases/0.9.1/aframe.min.js"></script>
-    <script src="https://rawgit.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
-    
-    <!-- add this script in order to load a large set of 3D model extensions-->
-    <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-    
+    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
+    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+
     <body style='margin : 0px; overflow: hidden;'>
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
-        <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 4x4;'>
+        <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
         <a-assets>
             <a-asset-item id="animated-asset" src="https://github.com/R-Walther/https-r-walther.github.io-AR-Cam/blob/main/3d%20models/Bottle_30k.gltf"></a-asset-item>
@@ -21,26 +19,6 @@
             <a-box position='0 0.5 0' color="yellow"></a-box>
         </a-marker>
 
-            <!--
-        <a-marker id="animated-marker" type='barcode' value='6'>
-            <a-entity
-                gltf-model="#animated-asset"
-                scale="2">
-            </a-entity>
-        </a-marker>
-            -->
-        <!--change URL to barcode image , type can be adjusted to 'barcode' or 'pattern'-->
-        <!-- barcodes can be generated here: https://au.gmented.com/app/marker/marker.php -->
-        <a-marker type="pattern" preset="custom" url="https://github.com/R-Walther/https-r-walther.github.io-AR-Cam/blob/main/patterns/4x4%20barcode%20marker.png" id="animated-marker" type='barcode' value='6'>
-            <a-entity
-                animation-mixer
-                gltf-model="#animated-asset"
-                scale="2 2 2">
-            </a-entity>
-        </a-marker>
-
-
-        <!-- use this <a-entity camera> to support multiple-markers, otherwise use <a-marker-camera> instead of </a-marker> -->
         <a-entity camera></a-entity>
         </a-scene>
     </body>
