--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
         <a-assets>
-            <a-asset-item id="animated-asset" src="https://github.com/CesiumGS/cesium/blob/master/Apps/SampleData/models/CesiumBalloon/CesiumBalloon.glb"></a-asset-item>
+            <a-asset-item id="animated-asset" src="https://github.com/KhronosGroup/glTF-Sample-Models/blob/master/2.0/CesiumMan/glTF/CesiumMan.gltf"></a-asset-item>
         </a-assets>
 
         <a-marker type='barcode' value='7'>
