--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
         <a-assets>
-            <a-asset-item id="animated-asset" src="https://r-walther.github.io/https-r-walther.github.io-AR-Cam/3d%20models/Bottle_9900.gltf"></a-asset-item>
+            <a-asset-item id="animated-asset" src="https://r-walther.github.io/https-r-walther.github.io-AR-Cam/3d models/Bottle_111k.gltf"></a-asset-item>
         </a-assets>
 
         <a-marker type='barcode' value='7'>
